<resources>
    <string name="app_name">GrubMate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="feed_title">Latest Feed</string>
    <string name="action_settings">Settings</string>
    <string name="default_text">This is default text, Hopefully it changes</string>
    <string name="title_activity_post_action">Post</string>
    <string name="post_action_title">Post</string>
    <string name="post_action_item_name_hint">What is your item?</string>
    <string name="post_action_tags_hint">Tags (Divide by ",")</string>
    <string name="post_action_allergy_hint">What ingredients may cause allergy?</string>
    <string name="post_action_description_hint">Description:</string>
    <string name="post_action_quantity_hint">How many portions do you have?</string>
    <string name="action_search">Search</string>
    <string name="button_post">Post</string>
    <string name="button_subscribe">Subscribe</string>
    <string-array name="food_category">
        <item>Category</item>
        <item>Asian</item>å
        <item>Mexican</item>
        <item>Italian</item>
        <item>American</item>
        <item>Desserts</item>
    </string-array>
    <string-array name="time_period">
        <item>Time Period</item>
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
    <string-array name="group">
        <item>All</item>
    </string-array>
    <string name="title_activity_subscribe_action">Subscribe</string>
    <string name="subscribe_action_title">Subscribe</string>
    <string name="post_action_address_hint">Enter you address for picking up</string>
    <string name="serach_activity_title">Search</string>
    <string name="serach_item_name_hint">What food do you want?</string>
    <string name="search_button_text">Search</string>
    <string name="profile_description_hint">How would you describe yourslef?</string>
    <string name="profile_name_default">GrubMate</string>
    <string name="feed_empty_message">You currently have no available posts</string>
    <string name="search_advance_search_hint">Advance Search ↓(toggle)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">1857435091252875</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="subscription_empty_text">Oh, you don\'t have subscriptions yet.</string>
    <string name="tv_feed_quantity_default">0</string>
    <string name="feed_detail_name_default">lolipop</string>
    <string name="b_request_text">Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_post_text">Add a post</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_request_title">Request</string>
    <string name="notification_match_title">Match</string>
    <string name="notification_accpted_title">Accepted</string>
    <string name="fragment_post_title">Your Posts</string>
    <string name="loading_layout_text">Your Oreo is on the way</string>
    <string name="notification_rating_title">Rating</string>
    <string name="notification_submit_button">submit</string>
</resources>
