<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.grubmate.grubmate.PostActionActivity"
    tools:showIn="@layout/activity_post_action">
    <TextView
        android:id="@+id/tv_post_action_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textAlignment="center"
        android:text="@string/post_action_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:showDividers="middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/et_post_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_item_name_hint"
                android:inputType="text"/>
            <CheckBox
                android:id="@+id/cb_post_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Homemade"/>

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_post_item_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_tags_hint"
                android:inputType="text"
                />
            <Button android:id="@+id/b_post_action_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Photos">
            </Button>
            <EditText
                android:id="@+id/et_post_item_description"
                android:lines="2"
                android:maxLines="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_description_hint"/>
            <EditText
                android:id="@+id/et_post_item_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/post_action_quantity_hint"
                android:inputType="number"
                android:lines="3"
                />

            <Spinner
                android:id="@+id/spinner_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_post_item_allergy"
                android:hint="@string/post_action_allergy_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Spinner
                android:id="@+id/spinner_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>
            <Button
                android:id="@+id/et_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Location"/>
            <TextView
                android:id="@+id/et_location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
