<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:contentPadding="16dp"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="2dp">

    <LinearLayout
        android:id="@+id/ll_notification_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/notification_request_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_notification_request_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
            android:id="@+id/tv_notification_request_requester_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/b_notification_deny"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Deny" />

            <Button
                android:id="@+id/b_notification_accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Accept" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_notification_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/notification_rating_title"
            android:textSize="24sp" />
        <TextView
            android:id="@+id/tv_notification_rating_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"/>

        <TextView
            android:id="@+id/tv_notification_rating_from_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            />

        <TextView
            android:id="@+id/tv_notification_rating_to_user_name"
            android:layout_width="wrap_content"
            android:text="@string/default_text"
            android:layout_height="wrap_content" />

        <RatingBar
            android:id="@+id/rb_notification_rating"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:rating="5"
            android:stepSize="1" />
        <EditText
            android:id="@+id/tv_notification_rating_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:maxLines="1"/>
        <Button
            android:id="@+id/b_notification_submit"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_submit_button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_notification_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/notification_match_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_notification_match_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_notification_match_poster_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/b_notification_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Request" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_notification_accepted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/notification_accpted_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_notification_accepted_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</android.support.v7.widget.CardView>